# Stocks

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  doesthishelp.md  pyproject.toml  requirements-dev.in  requirements.lock.txt  requirements.txt  strategy_scanner.py  theplan.md
.github/workflows/: ci.yml
config/: costs.yaml  data.yaml  scoring.yaml  signals.yaml  weights_frozen_YYYYMMDD.yaml
docs/: BACKTEST_METHODOLOGY.md  CHANGELOG.md  DATA_LINEAGE.md  DATA_SOURCES.md  GOVERNANCE.md  INTERPRETING_OUTPUT.md  MODEL_CARD.md  QUICKSTART.md  README.md  SIGNALS_REFERENCE.md  VALIDATION_LOG.md
docs/adr/: README.md
tests/: conftest.py
tests/integration/: test_cli_smoke.py
tests/unit/config/: test_config_merge.py
tests/unit/data/: test_data_base.py
tests/unit/utils/: test_logging.py
tw_scanner/: __init__.py  cli.py
tw_scanner/config/: __init__.py  backtest.yaml  costs.yaml  default.yaml  loader.py  schema.py  scoring.yaml  signals.yaml  universe.yaml
tw_scanner/data/: __init__.py  base.py  benchmarks.py  calendar.py  corp_actions.py  finmind_client.py  flows.py  fundamentals.py  industry.py  liquidity.py  margin.py  market_value.py  parquet_cache.py  prices.py  securities_lending.py  short_balance.py  twse_client.py  universe.py
tw_scanner/governance/: manifest.py
tw_scanner/pipeline/: screen.py
tw_scanner/scoring/: model_card.md
tw_scanner/utils/: logging.py
