[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tw-scanner"
dynamic = ["version"]
description = "Point-in-time Taiwan equity scanner scaffold."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "Stocks maintainers" },
]
dependencies = [
  "requests>=2.31",
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.12",
  "tqdm>=4.66",
  "matplotlib>=3.8",
  "lxml>=5.0",
  "openpyxl>=3.1",
  "finmind>=1.7",
  "python-dotenv>=1.0",
  "pyarrow>=15.0",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
validation = [
  "yfinance>=0.2.40",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-mock>=3.12",
  "ruff>=0.5",
  "mypy>=1.10",
  "pandas-stubs>=2.2",
  "types-requests>=2.31",
  "types-PyYAML>=6.0",
  "pre-commit>=3.7",
  "statsmodels>=0.14",
  "scikit-learn>=1.4",
  "plotly>=5.20",
  "hypothesis>=6.100",
  "ipykernel>=6.29",
  "pip-tools>=7.4",
]
all = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-mock>=3.12",
  "ruff>=0.5",
  "mypy>=1.10",
  "pandas-stubs>=2.2",
  "types-requests>=2.31",
  "types-PyYAML>=6.0",
  "pre-commit>=3.7",
  "statsmodels>=0.14",
  "scikit-learn>=1.4",
  "plotly>=5.20",
  "hypothesis>=6.100",
  "ipykernel>=6.29",
  "pip-tools>=7.4",
  "yfinance>=0.2.40",
]

[project.scripts]
tw-scanner = "tw_scanner.cli:main"

[tool.setuptools.dynamic]
version = { attr = "tw_scanner.__version__.__version__" }

[tool.setuptools.packages.find]
include = ["tw_scanner*"]

[tool.setuptools.package-data]
tw_scanner = ["config/*.yaml", "scoring/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.phase0.external-tools]
gitleaks = "Install as a system binary for pre-commit; CI uses gitleaks/gitleaks-action."

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".cache",
  ".git",
  ".venv",
  "strategy_output",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
packages = ["tw_scanner"]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
